package model

import gamesList

class Client (
    name: String
) : Person(name) {

    val library = ArrayList<Game>()


}