package model

class GameStudios(
    name: String
) : Person(name) {
    val income = ArrayList<Float>()
}